fixed ellipsis overflow

--- a/app/assets/css/app.less
+++ b/app/assets/css/app.less
@@ -67,6 +67,9 @@ form .select2-container {
   .rest-90 {
     width: calc(~"100% - 90px - 15px");
     display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 
